Lua extension fails to remove variable callback
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::LUA run-time Severity::major Type::bug Version::master git + 1 deleted label
added Component::LUA run-time Severity::major Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %2.0.0 bugs
changed milestone to %2.0.0 bugs
- Jean-Baptiste Kempf assigned to @jbk and unassigned @ivoire
commit b29deba6 Author: Jean-Baptiste Kempf jb@videolan.org Date: Mon Oct 10 00:55:22 2011 +0200
lua: remove variable callback Close [#5271](https://code.videolan.org/videolan/vlc/-/issues/5271), [#5430](https://code.videolan.org/videolan/vlc/-/issues/5430)
Original author: jb@videolan.org
- Migration Bot added Status::fixed label
added Status::fixed label
- Migration Bot closed
closed
Please register or sign in to reply