lua: remove variable callback

Close #5271, #5430